feat: migration org.tkit, update image model
