# src/main/openapi/onecx-image-internal-openapi.yaml
@@ -14,6 +14,12 @@ paths:
         - imagesInternal
       description: Upload Images
       parameters:
+        - in: header
+          name: Content-Length
+          required: true
+          schema:
+            minimum: 1
+            type: integer
         - name: refId
           in: path
           required: true
@@ -23,13 +29,19 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            $ref: "#/components/schemas/RefType"
       operationId: uploadImage
       requestBody:
         required: true
         content:
-          application/octet-stream:
+          image/png:
             schema:
+              minLength: 1
+              type: string
+              format: binary
+          image/jpg:
+            schema:
+              minLength: 1
               type: string
               format: binary
       responses:
@@ -56,7 +68,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            $ref: "#/components/schemas/RefType"
       responses:
         "200":
           description: OK
@@ -81,6 +93,11 @@ paths:
       description: update Images
       operationId: updateImage
       parameters:
+        - in: header
+          name: Content-Length
+          schema:
+            type: integer
+            minimum: 1
         - name: refId
           in: path
           required: true
@@ -90,11 +107,16 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            $ref: "#/components/schemas/RefType"
       requestBody:
         required: true
         content:
-          application/octet-stream:
+          image/png:
+            schema:
+              minLength: 1
+              type: string
+              format: binary
+          image/jpg:
             schema:
               minLength: 1
               type: string
@@ -114,6 +136,9 @@ paths:
                 $ref: '#/components/schemas/ProblemDetailResponse'
 components:
   schemas:
+    RefType:
+      type: string
+      enum: [ logo, favicon ]
     ImageInfo:
       type: object
       properties:
